readme.md file updated with documentation

--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,3 +1,6 @@
 PORT=5000
 MONGO_URI='mongodb+srv://<username>:<password>@imdb.46rj40h.mongodb.net/realtime-data-app?retryWrites=true&w=majority&appName=IMDB'
 API_KEY='CG-sFj1Z8kvwWDZC7q757m2p4wE'
+
+<username> = your mongodb atlas username (add this for testing : tarun7)
+<password> = your mongodb atlas password (add this for testing : tarun7)
